--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aoc2022",
+  "name": "aoc-ts-2022",
   "version": "1.0.0",
   "description": "Advent of Code 2022 - solutions",
   "type": "module",
