--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "aocrunner day",
     "build": "aocrunner build",
     "format": "prettier -w src",
-    "update:readme": "aocrunner update:readme"
+    "update:readme": "aocrunner update:readme",
+    "prepare": "husky install"
   },
   "keywords": [
     "aoc"
@@ -18,7 +19,8 @@
     "@types/heap": "^0.2.31",
     "@types/node": "^16.11.6",
     "aocrunner": "^1.9.1",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "heap": "^0.2.7",
