--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "prettier --write"
+    "*.{js,jsx,ts,tsx}": "prettier --write",
+    ".aocrunner.json": "yarn update:readme"
   },
   "keywords": [
     "aoc"
