--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "esModuleInterop": true,
   },
   "include": [
     "src"
