--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/heap": "^0.2.31",
     "@types/lodash": "^4.14.191",
     "@types/node": "^16.11.6",
-    "aocrunner": "^1.9.6",
+    "aocrunner": "1.9.1",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.4",
     "prettier": "^2.8.0",
